# ChangeLog for portage-postsyncd-mv

*portage-postsyncd-mv-8.0:
	Martin Väth <mvath at google.com>:
	- Support different permissions for */.git/hooks/* (default to 0755)

*portage-postsyncd-mv-7.1:
	Martin Väth <martin at mvath.de>:
	- Assume existing .git indicates git syncing

*portage-postsyncd-mv-7.0:
	Martin Väth <martin at mvath.de>:
	- Support gentoo-mirror via variable POSTSYNC_MIRROR
	- Change default: POSTSYNC_EGENCACHE=""

*portage-postsyncd-mv-6.0.1:
	Martin Väth <martin at mvath.de>:
	- Treat 0 and - as false only if no symbol follows

*portage-postsyncd-mv-6.0.0:
	Martin Väth <martin at mvath.de>:
	- Re-enumerate services
	- Set permissions also at the end
	- No default write permissions. Change default file permissions

*portage-postsyncd-mv-5.3.0:
	Martin Väth <martin at mvath.de>:
	- Fix simultaneous setting of several permissions
	- More secure default dir permissions (sticky bit and group suid)

*portage-postsyncd-mv-5.2.0:
	Martin Väth <martin at mvath.de>:
	- Introduce POSTSYNC_RSYNC_TIMEOUT and let it default to 20
	- Use modify-window=2 to deal with FAT filesystems

*portage-postsyncd-mv-5.1.1:
	Martin Väth <martin at mvath.de>:
	- Introduce POSTSYNC_RSYNC_EXTRA_OPTS and let it default to -c

*portage-postsyncd-mv-5.1.0:
	Martin Väth <martin at mvath.de>:
	- Skip cache fetching with rsync based on checksum

*portage-postsyncd-mv-5.0.2:
	Martin Väth <martin at mvath.de>:
	- Replace "git status" by "git udpate-index --refresh -q --unmerged"
	  which is the for us important part which "git status" does internally
	  https://bugs.gentoo.org/show_bug.cgi?id=552814#c43

*portage-postsyncd-mv-5.0.1:
	Martin Väth <martin at mvath.de>:
	- Use git reset --merge again, but preceed by git status:
	  See https://bugs.gentoo.org/show_bug.cgi?id=552814#c38

*portage-postsyncd-mv-5.0.0:
	Martin Väth <martin at mvath.de>:
	- Never attempt git merging; use always git reset --hard
	- Introduce *_RETRY_* and *_KEEP_* for git error handling and