@@ -1,5 +1,11 @@
 # ChangeLog for portage-postsyncd-mv
 
+*portage-postsyncd-mv-8.1:
+	Martin Väth <mvath at google.com>:
+	- Avoid git gc --agressive. Use instead:
+	- git repack -f -a -d --window=250 --depth=250
+	  https://metalinguist.wordpress.com/2007/12/06/the-woes-of-git-gc-aggressive-and-how-git-deltas-work
+
 *portage-postsyncd-mv-8.0:
 	Martin Väth <mvath at google.com>:
 	- Support different permissions for */.git/hooks/* (default to 0755)
